# SlateHub

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  notes.md
.claude/: CLAUDE.md
db/: schema.surql
server/: .env.test  Cargo.toml  Dockerfile
server/src/: error.rs  lib.rs  logging.rs  main.rs  record_id_ext.rs  templates.rs
server/src/middleware/: auth.rs  error_handler.rs
server/src/models/: equipment.rs  location.rs  media.rs  membership.rs  organization.rs  person.rs  production.rs  system.rs
server/src/routes/: api.rs  auth.rs  equipment.rs  locations.rs  media.rs  mod.rs  organizations.rs  productions.rs  profile.rs  public_profiles.rs  search.rs
server/src/services/: embedding.rs  mod.rs  s3.rs  verification.rs
server/static/css/: main.css
server/templates/: index.html
server/templates/equipment/: checkin.html  checkout.html  detail.html  form.html  kit_detail.html  kit_form.html  list.html  rental_history.html
server/templates/organizations/: edit.html  list.html  my-orgs.html  profile.html
server/templates/partials/: header.html
server/templates/search/: index.html
whatsapp-bot/: Cargo.toml
whatsapp-bot/src/: main.rs
