[package]
name = "whatsapp-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
whatsapp-rust = "0.2"
whatsapp-rust-tokio-transport = "0.2"
whatsapp-rust-ureq-http-client = "0.2"
wacore = "0.2"
wacore-binary = "0.2"
waproto = "0.2"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
